--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    Hello World!
+    Hello World, We are software developers!
 
     
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
