--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
   <body>
 
+    <h1 id="title">My first coding partner</h1>
+    <p id="description"> This is the description for my first coding partner work. :)  </p>
     Hello World, We are software developers!
 
-    
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
     <!--
