--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p id="description"> This is the description for my first coding partner work. :)  </p>
     Hello World, We are software developers!
 
+    <form id="survey-form">
+      <input id="name" type="text"/>
+    </form>
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
