--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <p id="description"> This is the description for my first coding partner work. :)  </p>
     Hello World, We are software developers!
 
-    <form id="survey-form">
+    <form id="survey-form" style="margin-top: 20px;">
+      <label for="name" >Name</label>
       <input id="name" type="text"/>
+      <label for="email">Email</label>
+      <input id="email" type="email">
+      <input type="submit">
     </form>
 
 
