--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <input id="name" type="text"/>
       <label for="email">Email</label>
       <input id="email" type="email">
+      <label for="number">Number</label>
+      <input id="number" type="number"/>
       <input type="submit">
     </form>
 
