--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     Hello World, We are software developers!
 
     <form id="survey-form" style="margin-top: 20px;">
-      <label for="name" >Name</label>
+      <label for="name-label" >Name</label>
       <input id="name" type="text"/>
-      <label for="email">Email</label>
+      <label for="email-label">Email</label>
       <input id="email" type="email">
-      <label for="number">Number</label>
-      <input id="number" type="number"/>
+      <label for="number-label">Number</label>
+      <input id="number" type="number" min="10" max="100" />
       <input type="submit">
     </form>
 
