--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     <form id="survey-form" style="margin-top: 20px;">
       <label for="name" >Name</label>
-      <input id="name" type="text"/>
+      <input id="name" type="text" placeholder="Your name"/>
       <label for="email">Email</label>
-      <input id="email" type="email">
+      <input id="email" type="email "placeholder="Your email">
       <label for="number">Number</label>
-      <input id="number" type="number"/>
+      <input id="number" type="number" placeholder="Your number"/>
+      <select id="dropdown"></select>
       <input type="submit">
+      
     </form>
 
 
