--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <input type="checkbox" value="cpp" name="languages"> C++ <br>
       <input type="checkbox" value="javascript" name="languages"> Javascript <br>
       <input type="checkbox" value="php" name="languages"> PHP <br>
-
+      <label for="comments">Aditional Comments:</label><br>
+      <textarea name="comments" id="" cols="30" rows="10"></textarea>
 
       <input type="submit">
       
